--- a/LineaExpres/app/src/main/res/layout/content_main.xml
+++ b/LineaExpres/app/src/main/res/layout/content_main.xml
@@ -59,9 +59,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:src="@drawable/ic_cart_m"
-        app:backgroundTint="#57348B"
-        app:layout_anchor="@id/bottomAppBar"
-        app:maxImageSize="35dp" />
+        app:backgroundTint="@color/FloatingButtonNavBarColor"
+        app:maxImageSize="35dp"
+        app:layout_anchor="@id/bottomAppBar" />
 
 
 
