--- a/LineaExpres/app/src/main/res/layout/fragment_profile.xml
+++ b/LineaExpres/app/src/main/res/layout/fragment_profile.xml
@@ -204,26 +204,24 @@
                     style="@style/buttons"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_margin="5dp"
                     android:layout_weight="1"
-                    android:background="@drawable/newcolorbluegraded"
+                    android:visibility="visible"
                     android:fontFamily="@font/montserrat_bold"
+                    android:layout_margin="5dp"
                     android:text="Telepeaje"
-                    android:textSize="@dimen/globalFontSize"
-                    android:visibility="visible" />
+                    android:textSize="@dimen/globalFontSize" />
 
                 <androidx.appcompat.widget.AppCompatButton
                     android:id="@+id/btnADP"
                     style="@style/buttons"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_margin="5dp"
                     android:layout_weight="1"
-                    android:background="@drawable/newcolorbluegraded"
                     android:fontFamily="@font/montserrat_bold"
+                    android:layout_margin="5dp"
+                    android:visibility="visible"
                     android:text="Acceso Digital Peatonal"
-                    android:textSize="@dimen/globalFontSize"
-                    android:visibility="visible" />
+                    android:textSize="@dimen/globalFontSize" />
 
                 <androidx.appcompat.widget.AppCompatButton
                     android:id="@+id/btnLineaExpres"
@@ -242,13 +240,12 @@
                     style="@style/buttons"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_margin="5dp"
                     android:layout_weight="1"
-                    android:background="@drawable/newcolorbluegraded"
                     android:fontFamily="@font/montserrat_bold"
+                    android:layout_margin="5dp"
+                    android:visibility="visible"
                     android:text="Borrar cuenta"
-                    android:textSize="@dimen/globalFontSize"
-                    android:visibility="visible" />
+                    android:textSize="@dimen/globalFontSize" />
 
                 <TextView
                     android:id="@+id/textView2"
