--- a/LineaExpres/app/src/main/res/layout/fragment_citas_change_date.xml
+++ b/LineaExpres/app/src/main/res/layout/fragment_citas_change_date.xml
@@ -61,6 +61,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="16dp"
+                android:background="@drawable/newcolorbluegraded"
                 android:text="Ver horarios disponibles"
                 android:textSize="@dimen/globalFontSize"
                 android:textStyle="bold"
@@ -114,6 +115,7 @@
                 android:textStyle="bold"
                 android:textSize="@dimen/globalFontSize"
                 android:layout_marginBottom="16dp"
+                android:background="@drawable/backgroundnewtheme"
                 android:text="Confirmar Cambio"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
