--- a/LineaExpres/app/src/main/res/layout/fragment_login.xml
+++ b/LineaExpres/app/src/main/res/layout/fragment_login.xml
@@ -123,6 +123,7 @@
             android:textSize="@dimen/globalFontSize"
             android:layout_width="240dp"
             android:layout_marginBottom="16dp"
+            android:background="@drawable/backgroundnewtheme"
             android:text="@string/Login_LoginBtn"
             app:layout_constraintBottom_toTopOf="@+id/RegisterBtn"
             app:layout_constraintEnd_toEndOf="parent"
@@ -135,6 +136,7 @@
             android:textStyle="bold"
             android:textSize="@dimen/globalFontSize"
             android:layout_marginBottom="32dp"
+            android:background="@drawable/backgroundnewtheme"
             android:text="Registrarse"
             app:layout_constraintBottom_toTopOf="@+id/Login_ForgotPasswordBtn"
             app:layout_constraintEnd_toEndOf="parent"
