--- a/LineaExpres/app/src/main/res/layout/fragment_reqinscription.xml
+++ b/LineaExpres/app/src/main/res/layout/fragment_reqinscription.xml
@@ -78,6 +78,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="8dp"
+                android:background="@drawable/newcolorbluegraded"
                 android:fontFamily="@font/montserrat_bold"
                 android:textSize="@dimen/globalFontSize"
                 android:text="@string/BtnUploadSentri"
@@ -119,6 +120,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="8dp"
+                android:background="@drawable/newcolorbluegraded"
                 android:fontFamily="@font/montserrat_bold"
                 style="@style/buttons"
                 android:textSize="@dimen/globalFontSize"
@@ -136,6 +138,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="8dp"
+                android:background="@drawable/newcolorbluegraded"
                 android:fontFamily="@font/montserrat_bold"
                 android:textSize="@dimen/globalFontSize"
                 style="@style/buttons"
@@ -550,6 +553,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="8dp"
+                android:background="@drawable/newcolorbluegraded"
                 android:fontFamily="@font/montserrat_bold"
                 style="@style/buttons"
                 android:textSize="@dimen/globalFontSize"
@@ -567,6 +571,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="8dp"
+                android:background="@drawable/newcolorbluegraded"
                 android:fontFamily="@font/montserrat_bold"
                 style="@style/buttons"
                 android:textSize="@dimen/globalFontSize"
@@ -584,6 +589,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="8dp"
+                android:background="@drawable/newcolorbluegraded"
                 android:fontFamily="@font/montserrat_bold"
                 style="@style/buttons"
                 android:textSize="@dimen/globalFontSize"
@@ -601,6 +607,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="8dp"
+                android:background="@drawable/newcolorbluegraded"
                 android:fontFamily="@font/montserrat_bold"
                 android:textSize="@dimen/globalFontSize"
                 style="@style/buttons"
@@ -618,6 +625,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="8dp"
+                android:background="@drawable/newcolorbluegraded"
                 android:fontFamily="@font/montserrat_bold"
                 android:textSize="@dimen/globalFontSize"
                 style="@style/buttons"
@@ -904,6 +912,8 @@
                         android:layout_width="match_parent"
                         android:layout_weight="1"
                         android:layout_margin="5dp"
+                        android:backgroundTint="#57348B"
+                        android:textColor="#FFFFFF"
                         android:layout_height="wrap_content"
                         android:text="Borrar Firma"
                         android:enabled="true" />
@@ -916,6 +926,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="60dp"
                 android:layout_marginBottom="32dp"
+                android:background="@drawable/backgroundnewtheme"
+
                 android:textColor="@color/white"
                 android:fontFamily="@font/montserrat_bold"
                 style="@style/firmarBtn"
