--- a/LineaExpres/app/src/main/res/drawable/ic_cart.xml
+++ b/LineaExpres/app/src/main/res/drawable/ic_cart.xml
@@ -6,18 +6,18 @@
     >
   <path
       android:pathData="M3.9,12.6c-1.5,1.8 -0.2,4.8 2.2,5.1 0.8,0.1 3,0.4 5.1,0.8l3.6,0.6 8.1,20.2c4.5,11.1 8.1,21 8.1,22 0,1 -0.9,3.6 -2.1,5.9 -1.2,2.4 -1.7,4.4 -1.2,4.9 1.3,1.3 59.8,0.7 59.8,-0.6 0,-0.6 -10.1,-1.1 -27.7,-1.3 -15.3,-0.1 -27.8,-0.6 -27.8,-1 0.1,-0.4 0.7,-1.8 1.5,-3.2 0.8,-1.4 1.4,-3.4 1.5,-4.5 0,-1.1 -3.8,-11.5 -8.4,-23 -7.5,-19 -8.6,-21.2 -11.5,-22.7 -1.8,-0.9 -4,-2.3 -5,-3.2 -2.2,-2 -4.5,-2 -6.2,-0z"
-      android:fillColor="#000000"
+      android:fillColor="#FFFFFF"
       android:strokeColor="#00000000"/>
   <path
       android:pathData="M27.5,26c-0.6,1 9.9,31.3 11.7,33.6 1,1.3 47.7,0.7 49.1,-0.6 0.8,-0.7 4.7,-25.4 4.7,-29.6 0,-2.1 -0.4,-2.2 -18.7,-2.8 -10.4,-0.3 -25,-0.8 -32.5,-1.1 -9.1,-0.3 -13.9,-0.2 -14.3,0.5zM85.5,35c0,1.3 -3.4,1.5 -23.9,1.8 -13.9,0.1 -24.4,-0.2 -24.9,-0.7 -2.7,-2.7 0.9,-3.1 24.6,-2.9 20.7,0.3 24.2,0.5 24.2,1.8zM82.8,42.7c-0.3,1.6 -2.3,1.8 -21.6,2.1 -20.7,0.2 -21.2,0.2 -21.2,-1.8 0,-1.9 0.6,-2 21.6,-2 20,-0 21.5,0.1 21.2,1.7zM81,50.5c0,1.3 -2.8,1.5 -18.9,1.5 -17.2,-0 -21.3,-0.5 -19.4,-2.4 0.3,-0.3 9.1,-0.6 19.5,-0.6 16,-0 18.8,0.2 18.8,1.5z"
-      android:fillColor="#000000"
+      android:fillColor="#FFFFFF"
       android:strokeColor="#00000000"/>
   <path
       android:pathData="M37.2,76.6c-5.6,3.9 -0.4,11.8 5.3,8 3,-2 3.2,-4.9 0.5,-7.6 -2.4,-2.4 -2.9,-2.4 -5.8,-0.4z"
-      android:fillColor="#000000"
+      android:fillColor="#FFFFFF"
       android:strokeColor="#00000000"/>
   <path
       android:pathData="M76,77c-1.1,1.1 -2,2.7 -2,3.5 0,1.7 3.5,5.5 5.1,5.5 4.9,-0 6.8,-6.6 2.7,-9.4 -2.9,-2 -3.4,-2 -5.8,0.4z"
-      android:fillColor="#000000"
+      android:fillColor="#FFFFFF"
       android:strokeColor="#00000000"/>
 </vector>
