--- a/LineaExpres/app/src/main/res/layout/fragment_add_adp.xml
+++ b/LineaExpres/app/src/main/res/layout/fragment_add_adp.xml
@@ -98,6 +98,7 @@
                     android:layout_height="40dp"
                     android:fontFamily="@font/montserrat_bold"
                     android:layout_margin="5dp"
+                    android:background="@drawable/backgroundnewtheme"
                     android:text="Validar TAG"
                     android:textSize="@dimen/globalFontSize" />
             </LinearLayout>
