--- a/LineaExpres/app/src/main/res/layout/fragment_add_linea_expres.xml
+++ b/LineaExpres/app/src/main/res/layout/fragment_add_linea_expres.xml
@@ -95,6 +95,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="40dp"
                     android:fontFamily="@font/montserrat_bold"
+                    android:background="@drawable/backgroundnewtheme"
                     android:layout_margin="5dp"
                     android:text="Continuar"
                     android:textSize="@dimen/globalFontSize" />
