--- a/LineaExpres/app/src/main/res/layout/fragment_cambio_vehiculo.xml
+++ b/LineaExpres/app/src/main/res/layout/fragment_cambio_vehiculo.xml
@@ -232,6 +232,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="8dp"
+                android:background="@drawable/newcolorbluegraded"
                 android:fontFamily="@font/montserrat_bold"
                 android:textSize="@dimen/globalFontSize"
                 android:text="@string/BtnUploadCirculationCard"
@@ -255,6 +256,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="8dp"
+                android:background="@drawable/newcolorbluegraded"
                 android:fontFamily="@font/montserrat_bold"
                 android:textSize="@dimen/globalFontSize"
                 android:text="@string/BtnUploadNewSentriOrRenowal"
@@ -279,6 +281,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="8dp"
+                android:background="@drawable/newcolorbluegraded"
                 android:fontFamily="@font/montserrat_bold"
                 style="@style/buttons"
                 android:textSize="@dimen/globalFontSize"
@@ -303,6 +306,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="8dp"
+                android:background="@drawable/newcolorbluegraded"
+
                 android:fontFamily="@font/montserrat_bold"
                 style="@style/buttons"
                 android:textSize="@dimen/globalFontSize"
@@ -326,6 +331,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="8dp"
+                android:background="@drawable/newcolorbluegraded"
                 android:fontFamily="@font/montserrat_bold"
                 style="@style/buttons"
                 android:textSize="@dimen/globalFontSize"
@@ -349,6 +355,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="8dp"
+                android:background="@drawable/newcolorbluegraded"
                 android:fontFamily="@font/montserrat_bold"
                 style="@style/buttons"
                 android:textSize="@dimen/globalFontSize"
@@ -479,6 +486,8 @@
                         android:layout_width="0dp"
                         android:layout_weight="1"
                         android:layout_margin="5dp"
+                        android:backgroundTint="#57348B"
+                        android:textColor="#FFFFFF"
                         android:layout_height="wrap_content"
                         android:text="Borrar Firma"
                         android:enabled="true" />
@@ -491,6 +500,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="60dp"
                 android:layout_marginBottom="32dp"
+                android:background="@drawable/backgroundnewtheme"
+
                 android:textColor="@color/white"
                 android:fontFamily="@font/montserrat_bold"
                 style="@style/firmarBtn"
