--- a/LineaExpres/app/src/main/res/layout/fragment_change_pass.xml
+++ b/LineaExpres/app/src/main/res/layout/fragment_change_pass.xml
@@ -95,6 +95,7 @@
             android:textStyle="bold"
             android:textSize="@dimen/globalFontSize"
             android:layout_marginBottom="16dp"
+            android:background="@drawable/backgroundnewtheme"
             android:text="Confirmar"
             app:layout_constraintBottom_toTopOf="@+id/msgShow"
             app:layout_constraintEnd_toEndOf="parent"
