--- a/LineaExpres/app/src/main/res/layout/fragment_choose_veh_add.xml
+++ b/LineaExpres/app/src/main/res/layout/fragment_choose_veh_add.xml
@@ -77,6 +77,7 @@
                     android:layout_weight="1"
                     android:fontFamily="@font/montserrat_bold"
                     android:layout_margin="5dp"
+                    android:background="@drawable/newcolorbluegraded"
                     android:text="Línea Exprés"
                     android:textSize="@dimen/globalFontSize" />
 
@@ -88,6 +89,8 @@
                     android:layout_weight="1"
                     android:fontFamily="@font/montserrat_bold"
                     android:layout_margin="5dp"
+                    android:background="@drawable/newcolorbluegraded"
+
                     android:text="Telepeaje"
                     android:textSize="@dimen/globalFontSize" />
 
@@ -112,6 +115,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="40dp"
                     android:layout_margin="5dp"
+                    android:background="@drawable/backgroundnewtheme"
                     android:fontFamily="@font/montserrat_bold"
                     android:text="Solicitud de inscripción"
                     android:textSize="@dimen/globalFontSize" />
