--- a/LineaExpres/app/src/main/res/layout/fragment_contactanos.xml
+++ b/LineaExpres/app/src/main/res/layout/fragment_contactanos.xml
@@ -143,6 +143,7 @@
                 android:layout_height="40dp"
                 android:fontFamily="@font/montserrat_bold"
                 android:layout_margin="5dp"
+                android:background="@drawable/backgroundnewtheme"
                 android:text="Enviar"
                 android:textSize="@dimen/globalFontSize" />
 
