--- a/LineaExpres/app/src/main/res/layout/fragment_register.xml
+++ b/LineaExpres/app/src/main/res/layout/fragment_register.xml
@@ -208,6 +208,7 @@
                             android:textStyle="bold"
                             android:textSize="@dimen/globalFontSize"
                             android:text="Registrar"
+                            android:background="@drawable/backgroundnewtheme"
                             app:layout_constraintBottom_toBottomOf="parent"
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintStart_toStartOf="parent" />
