--- a/LineaExpres/app/src/main/res/layout/fragment_profile.xml
+++ b/LineaExpres/app/src/main/res/layout/fragment_profile.xml
@@ -356,44 +356,43 @@
             </LinearLayout>
         </androidx.constraintlayout.widget.ConstraintLayout>
     </ScrollView>
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/MainBorraCuentaLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/colorblackopac"
         android:paddingBottom="100dp"
-        android:visibility="gone"
-        >
+        android:visibility="gone">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/BorrarCuentaContstraint"
+            style="@style/global_rounded"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            style="@style/global_rounded"
             android:layout_margin="@dimen/boxMargin"
             android:padding="15dp"
-            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
 
             >
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_margin="@dimen/boxMargin"
                 android:layout_marginBottom="14dp"
                 android:fontFamily="@font/montserrat_bold"
                 android:text="¿Estás seguro?"
                 android:textAlignment="center"
                 android:textColor="@color/black"
                 android:textSize="20sp"
-                android:layout_margin="@dimen/boxMargin"
-                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toTopOf="@+id/secChildBorrarCuenta"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintBottom_toTopOf="@+id/secChildBorrarCuenta"
-                />
+                app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
                 android:id="@+id/secChildBorrarCuenta"
@@ -405,44 +404,44 @@
                 android:textAlignment="center"
                 android:textColor="@color/black"
                 android:textSize="20sp"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintBottom_toTopOf="@+id/btnContainerBorrarCuenta"
-                />
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent" />
 
             <LinearLayout
                 android:id="@+id/btnContainerBorrarCuenta"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
-                >
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent">
 
                 <androidx.appcompat.widget.AppCompatButton
                     android:id="@+id/btnCancelarBorrarCuenta"
                     style="@style/buttons"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:visibility="visible"
-                    android:fontFamily="@font/montserrat_bold"
                     android:layout_margin="5dp"
+                    android:layout_weight="1"
+                    android:background="#57348B"
+                    android:fontFamily="@font/montserrat_bold"
                     android:text="Cancelar"
-                    android:textSize="@dimen/globalFontSize" />
+                    android:textSize="@dimen/globalFontSize"
+                    android:visibility="visible" />
 
                 <androidx.appcompat.widget.AppCompatButton
                     android:id="@+id/btnAceptarCancelarCuenta"
                     style="@style/buttons"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:visibility="visible"
-                    android:fontFamily="@font/montserrat_bold"
                     android:layout_margin="5dp"
+                    android:layout_weight="1"
+                    android:background="#196EB6"
+                    android:fontFamily="@font/montserrat_bold"
                     android:text="De acuerdo"
-                    android:textSize="@dimen/globalFontSize" />
+                    android:textSize="@dimen/globalFontSize"
+                    android:visibility="visible" />
 
             </LinearLayout>
         </androidx.constraintlayout.widget.ConstraintLayout>
