--- a/LineaExpres/app/src/main/res/layout/recarga_vehiculos_plantilla.xml
+++ b/LineaExpres/app/src/main/res/layout/recarga_vehiculos_plantilla.xml
@@ -1,101 +1,227 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:layout_gravity="center"
+    android:backgroundTint="#FDFDFD"
+    android:orientation="vertical">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:orientation="vertical"
+    <ScrollView
         style="@style/global_rounded"
-        android:padding="15dp"
-        android:layout_marginBottom="15dp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_gravity="center"
+        android:layout_marginLeft="15dp"
+        android:layout_marginTop="15dp"
+        android:layout_marginRight="15dp"
+        android:layout_marginBottom="100dp"
+        android:padding="@dimen/boxPadding"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
 
         >
-        <TextView
-            android:id="@+id/type"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textColor="@color/black"
-            android:textSize="20sp"
-            android:textAlignment="center"
-            android:fontFamily="@font/montserrat_bold"
-            android:text="Cargando..."/>
 
-        <ImageView
-            android:id="@+id/vehicleImg"
-            android:layout_width="match_parent"
-            android:layout_height="200dp"
-            android:src="@drawable/telepeaje" />
-
-        <TextView
-            android:id="@+id/modeloText"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textColor="@color/black"
-            android:textSize="24sp"
-            android:fontFamily="@font/montserrat_bold"
-            android:text="Cargando..."/>
-        <TextView
-            android:id="@+id/placasText"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textSize="18sp"
-            android:fontFamily="@font/montserrat_bold"
-            android:text="Cargando..."/>
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="10dp"/>
-        <TextView
-            android:id="@+id/tagText"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="15dp"
+            android:orientation="vertical"
+            android:padding="15dp"
+            android:visibility="visible"
+
+            >
+
+            <TextView
+                android:id="@+id/type"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/montserrat_bold"
+                android:text="Cargando..."
+                android:textAlignment="center"
+                android:textColor="@color/black"
+                android:textSize="20sp" />
+
+            <ImageView
+                android:id="@+id/vehicleImg"
+                android:layout_width="match_parent"
+                android:layout_height="200dp"
+                android:src="@drawable/telepeaje" />
+
+            <TextView
+                android:id="@+id/modeloText"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/montserrat_bold"
+                android:text="Cargando..."
+                android:textColor="@color/black"
+                android:textSize="24sp" />
+
+            <TextView
+                android:id="@+id/placasText"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/montserrat_bold"
+                android:text="Cargando..."
+                android:textSize="18sp" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="10dp" />
+
+            <TextView
+                android:id="@+id/tagText"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/merriweather_regular"
+                android:text="Tag: cargando..."
+                android:textColor="@color/black" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="10dp" />
+
+            <TextView
+                android:id="@+id/saldoText"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/merriweather_regular"
+                android:text="Saldo: cargando..."
+                android:textColor="@color/black" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="10dp" />
+
+            <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/btnRecarga"
+                style="@style/buttons2"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="2dp"
+                android:background="@drawable/newcolorbluegraded"
+                android:fontFamily="@font/montserrat_bold"
+                android:padding="10dp"
+                android:text="Recargar" />
+
+            <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/btnMisCruces"
+                style="@style/buttons2"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="2dp"
+                android:background="@drawable/backgroundnewtheme"
+                android:fontFamily="@font/montserrat_bold"
+                android:padding="10dp"
+                android:text="Ver mis cruces" />
+
+            <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/btnMisCruces2"
+                style="@style/buttons2"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="2dp"
+                android:background="#63239D"
+                android:fontFamily="@font/montserrat_bold"
+                android:padding="10dp"
+                android:text="Eliminar Tag"
+
+                />
+        </LinearLayout>
+    </ScrollView>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/MainBorraTagLayout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/colorblackopac"
+        android:paddingBottom="-150dp"
+        android:visibility="gone">
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/BorrarTagContstraint"
+            style="@style/global_rounded"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textColor="@color/black"
-            android:fontFamily="@font/merriweather_regular"
-            android:text="Tag: cargando..."/>
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="10dp"
-            />
-        <TextView
-            android:id="@+id/saldoText"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textColor="@color/black"
-            android:fontFamily="@font/merriweather_regular"
-            android:text="Saldo: cargando..."/>
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="10dp"/>
+            android:layout_margin="@dimen/boxMargin"
+            android:padding="15dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
 
-        <androidx.appcompat.widget.AppCompatButton
-            android:id="@+id/btnRecarga"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Recargar"
-            android:fontFamily="@font/montserrat_bold"
-            android:padding="10dp"
-            android:layout_margin="2dp"
-            style="@style/buttons2"
-            />
+            >
 
-        <androidx.appcompat.widget.AppCompatButton
-            android:id="@+id/btnMisCruces"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Ver mis cruces"
-            android:fontFamily="@font/montserrat_bold"
-            android:padding="10dp"
-            android:layout_margin="2dp"
-            style="@style/buttons2"
-            />
-    </LinearLayout>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="@dimen/boxMargin"
+                android:layout_marginBottom="14dp"
+                android:fontFamily="@font/montserrat_bold"
+                android:text="¿Estás seguro?"
+                android:textAlignment="center"
+                android:textColor="@color/black"
+                android:textSize="20sp"
+                app:layout_constraintBottom_toTopOf="@+id/secChildBorrarCuenta"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <TextView
+                android:id="@+id/secChildBorrarCuenta"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="14dp"
+                android:fontFamily="@font/merriweather_regular"
+                android:text="Estás a punto de borrar tu TAG permanentemente, esta acción no se puede deshacer."
+                android:textAlignment="center"
+                android:textColor="@color/black"
+                android:textSize="20sp"
+                app:layout_constraintBottom_toTopOf="@+id/btnContainerBorrarCuenta"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent" />
+
+            <LinearLayout
+                android:id="@+id/btnContainerBorrarCuenta"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent">
+
+                <androidx.appcompat.widget.AppCompatButton
+                    android:id="@+id/btnCancelarBorrarTAG"
+                    style="@style/buttons"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="5dp"
+                    android:layout_weight="1"
+                    android:background="#57348B"
+                    android:fontFamily="@font/montserrat_bold"
+                    android:text="Cancelar"
+                    android:textSize="@dimen/globalFontSize"
+                    android:visibility="visible" />
+
+                <androidx.appcompat.widget.AppCompatButton
+                    android:id="@+id/btnAceptarCancelarTAG"
+                    style="@style/buttons"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="5dp"
+                    android:layout_weight="1"
+                    android:fontFamily="@font/montserrat_bold"
+                    android:text="De acuerdo"
+                    android:textSize="@dimen/globalFontSize"
+                    android:visibility="visible" />
+
+            </LinearLayout>
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
