--- a/LineaExpres/app/src/main/res/layout/recarga_vehiculos_plantilla.xml
+++ b/LineaExpres/app/src/main/res/layout/recarga_vehiculos_plantilla.xml
@@ -135,11 +135,15 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/MainBorraTagLayout"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         android:background="@color/colorblackopac"
-        android:paddingBottom="-150dp"
-        android:visibility="gone">
+        android:paddingBottom="100dp"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/BorrarTagContstraint"
